[LFC][IFC] Close/open nested bidi contexts for new lines after force line breaks https://bugs.webkit.org/show_bug.cgi?id=234611

Reviewed by Antti Koivisto.

Bidi handling requires us to close all the nested bidi contexts at the end of the line (triggered by forced line breaks)
and re-open it for the content on the next line.

* layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::handleEnterExitBidiContext):
(WebCore::Layout::buildBidiParagraph):



Canonical link: https://commits.webkit.org/245515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287375 268f45cc-cd09-0410-ab3c-d52691b4dbfc